feat: change-password

--- a/frontEndCaptini/src/app/Auth/forget-password/forget-password.component.html
+++ b/frontEndCaptini/src/app/Auth/forget-password/forget-password.component.html
@@ -5,6 +5,9 @@
     <div class="pb-3">
         <label>{{ 'resetPassword.resetMsg' | translate }}</label>
     </div>
+    <div *ngIf="errorMessage" class="alert text-danger">
+        <strong>{{'resetPassword.emailNotFound' | translate }}</strong> 
+    </div>
     <form [formGroup]="loginForgetForm" (ngSubmit)= "loginForget()">
         <div>
             <label for="exampleFormControlInput1" class="form-label">{{'user.email' | translate}}</label>
