--- a/frontEndCaptini/src/app/Auth/forget-password/forget-password.component.html
+++ b/frontEndCaptini/src/app/Auth/forget-password/forget-password.component.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="mb-3 text-center">
-            <span>{{ 'resetPassword.backToSignin' | translate }}<a routerLink="/login">{{ 'resetPassword.backToSigninMsg' | translate }}</a></span>
+            <span>{{ 'resetPassword.backToSignin' | translate }}<a routerLink="/login">{{ 'register.singIn' | translate }}</a></span>
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit" >{{ 'buttons.sendResetLink' | translate }}</button>
     </form>
