--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -248,6 +248,12 @@
                 </form>
             </div>
             <div class="tab-pane fade" id="pills-password" role="tabpanel" aria-labelledby="pills-password-tab">
+              <div [ngClass]="alertClass + ' alert alert-dismissible fade show'" role="alert" *ngIf="changePasswordRequested">
+                {{ msgContent | translate }}
+                <button type="button" class="btn close" data-dismiss="alert" aria-label="Close" (click)="changePasswordRequested = false">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
                 <form [formGroup]="passwordForm">
                   <div class="mb-3">
                     <label for="fullname" class="form-label">{{'user.old-password' | translate}}</label>
