--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
@@ -1,41 +1,79 @@
 <div class="container-fluid">
-    <section class="lessons">
-        <ul class="nav nav-pills nav-left justify-content-between" id="pills-tab" role="tablist">
-            <div class="breadcrumb">
-                <li class="nav-item" role="presentation">
-                    <button class="btn btn-default btn-sm" type="button" routerLink="/topics">
-                        <svg width="6" height="8" viewBox="0 0 6 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M2.31629 3.99993L5.20379 6.88743L4.37896 7.71226L0.666626 3.99993L4.37896 0.287598L5.20379 1.11243L2.31629 3.99993Z" fill="#32324D"/>
-                            </svg> {{'topic.topics' | translate}}
-                     </button>
-                </li>
-                <li>
-                    <h3 class="mx-3">{{'topic.lessons' | translate}}</h3>
-                </li>
+  <section class="lessons">
+    <ul
+      class="nav nav-pills nav-left justify-content-between"
+      id="pills-tab"
+      role="tablist"
+    >
+      <div class="breadcrumb">
+        <li class="nav-item" role="presentation">
+          <button
+            class="btn btn-default btn-sm"
+            type="button"
+            routerLink="/topics"
+          >
+            <svg
+              width="6"
+              height="8"
+              viewBox="0 0 6 8"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M2.31629 3.99993L5.20379 6.88743L4.37896 7.71226L0.666626 3.99993L4.37896 0.287598L5.20379 1.11243L2.31629 3.99993Z"
+                fill="#32324D"
+              />
+            </svg>
+            {{ "topic.topics" | translate }}
+          </button>
+        </li>
+        <li>
+          <h3 class="mx-3">{{ "topic.lessons" | translate }}</h3>
+        </li>
+      </div>
+      <li>
+        <form class="form-inline mt-xs-4">
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            placeholder="{{ 'topic.searchLesson' | translate }}"
+            aria-label="Search"
+            [value]="searchText"
+            (input)="onSearchChange($event)"
+          />
+        </form>
+      </li>
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="col-md-12">
+        <div class="card-group mb-3">
+          <div
+            class="card"
+            style="cursor: pointer; margin-right: 8px"
+            (click)="goToDetails(lesson.id, topic_id)"
+            *ngFor="let lesson of listlesson; let i = index"
+          >
+            <div class="card-body bg-yellow">
+              <div class="number">
+                <span *ngIf="listlesson && i < listlesson.length">0</span
+                >{{ i + 1 }}.
+              </div>
             </div>
-            <li>
-                <form class="form-inline search mt-xs-4">
-                    <input class="form-control mr-sm-2" type="search" placeholder="{{'topic.searchLesson' | translate}}" aria-label="Search">
-                </form>
-            </li>
-        </ul>
-        <div class="tab-content" id="pills-tabContent">
-            <div class="col-md-12">
-                <div class="card-group mb-3">
-                    <div class="card" style="cursor: pointer; margin-right: 8px;" (click)="gotodetails(lesson.id,topic_by_id?.id)" *ngFor="let lesson of listlesson; let i = index">
-                        <div class="card-body bg-yellow">
-                            <div class="number"><span *ngIf="listlesson && i<listlesson.length">0</span>{{i+1}}.</div>
-                        </div>
-                        <div class="card-header d-flex justify-content-between"style=" height: 100px;">
-                            <div class="">
-                                <h3>{{'topic.lesson' | translate}} {{i+1}}</h3>
-                                <p class="semi-bold">{{lesson.subject}}</p>
-                            </div>
-                            <span class="success badge"> {{'topic.finished' | translate}}</span>
-                        </div>
-                    </div>
-                </div>
+            <div
+              class="card-header d-flex justify-content-between"
+              style="height: 100px"
+            >
+              <div class="">
+                <h3>{{ "topic.lesson" | translate }} {{ i + 1 }}</h3>
+                <p class="semi-bold">{{ lesson.subject }}</p>
+              </div>
+              <span class="success badge">
+                {{ "topic.finished" | translate }}</span
+              >
             </div>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 </div>
