--- a/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
@@ -34,6 +34,9 @@
           <div class="card-body bg-yellow">
             <div class="number">Abc</div>
           </div>
+          <div class="progress" style="height: 10px;">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
           <div class="card-header d-flex justify-content-between">
             <div>
               <p class="semi-bold mb-0">{{ topic.topic_name }}</p>
