--- a/frontEndCaptini/src/styles.css
+++ b/frontEndCaptini/src/styles.css
@@ -5381,7 +5381,8 @@ fieldset:disabled .btn {
   overflow: hidden;
   font-size: 0.75rem;
   background-color: #e9ecef;
-  border-radius: 0.25rem;
+  border-radius: 0;
+  width: 100%;
 }
 
 .progress-bar {
