--- a/frontEndCaptini/src/app/Auth/register/register.component.html
+++ b/frontEndCaptini/src/app/Auth/register/register.component.html
@@ -99,9 +99,17 @@
             </div>
             <div class="checkbox mb-2">
                 <span>
-                  <input type="checkbox" value="false" [checked]="isChecked" formControlName="agree"> {{'register.agree' |translate}}<a href="#"> {{'register.terms' |translate}}</a> {{'register.and' |translate}} <a href="#"> {{'register.privacy' |translate}}</a>
+                  <input type="checkbox" value="false" [checked]="isChecked" formControlName="agree"> {{'register.agree' |translate}}
+                  <a href="#"> {{'register.terms' |translate}}</a> {{'register.and' |translate}}
+                  <a href="#" (click)="openPrivacyPolicy()"> {{'register.privacy' |translate}}</a>
                 </span>
+
+                <router-outlet></router-outlet>
+                <privacypolicy *ngIf="isPrivacyPolicyOpen" (closeModalEvent)="closePrivacyPolicy()"></privacypolicy>
+
             </div>
+
+
             <button class="w-100 btn btn-lg btn-primary mb-2" type="submit" [disabled]="registerForm.invalid && isChecked">{{'buttons.sign-up' | translate}}</button>
         </form>
         <span> {{'register.account'|translate}} <a routerLink="/login">{{'register.singIn'|translate}}</a></span>
