fix the privacy policy bug

--- a/frontEndCaptini/src/app/Auth/register/policies/privacypolicy.component.html
+++ b/frontEndCaptini/src/app/Auth/register/policies/privacypolicy.component.html
@@ -1,16 +1,13 @@
 <!-- Modal -->
-<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
-  aria-hidden="true">
+
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <h5 class="modal-title" id="exampleModalLongTitle">Privacy Policy</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <h1>Privacy Policy</h1>
         <p>Last updated: August 17, 2023</p>
         <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your
           information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
@@ -293,8 +290,9 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">{{'alert.close'| translate}}</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                                                aria-label="Close">{{'alert.close'| translate}}</button>
       </div>
     </div>
   </div>
-</div>
+
