add terms of use on registration, update profile page

--- a/frontEndCaptini/src/app/Auth/register/policies/privacypolicy.component.html
+++ b/frontEndCaptini/src/app/Auth/register/policies/privacypolicy.component.html
@@ -14,11 +14,11 @@
         <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the
           collection and use of information in accordance with this Privacy Policy.</p>
         <h3>Interpretation and Definitions</h3>
-        <h2>Interpretation</h2>
+        <h4>Interpretation</h4>
         <p>The words of which the initial letter is capitalized have meanings defined under the following conditions.
           The following definitions shall have the same meaning regardless of whether they appear in singular or in
           plural.</p>
-        <h2>Definitions</h2>
+        <h4>Definitions</h4>
         <p>For the purposes of this Privacy Policy:</p>
         <ul>
           <li>
@@ -32,7 +32,7 @@
           </li>
           <li>
             <p><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot;
-              or &quot;Our&quot; in this Agreement) refers to Árnastofnun, Suðurgötu, 102 Reykjavík.</p>
+              or &quot;Our&quot; in this Agreement) refers to Árnastofnun, Suðurgata, 102 Reykjavík.</p>
           </li>
           <li>
             <p><strong>Cookies</strong> are small files that are placed on Your computer, mobile device or any other
@@ -73,7 +73,7 @@
           </li>
         </ul>
         <h3>Collecting and Using Your Personal Data</h3>
-        <h2>Types of Data Collected</h2>
+        <h4>Types of Data Collected</h4>
         <h3>Personal Data</h3>
         <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that
           can be used to contact or identify You. Personally identifiable information may include, but is not limited
@@ -147,7 +147,7 @@
         </ul>
         <p>For more information about the cookies we use and your choices regarding cookies, please visit our Cookies
           Policy or the Cookies section of our Privacy Policy.</p>
-        <h2>Use of Your Personal Data</h2>
+        <h4>Use of Your Personal Data</h4>
         <p>The Company may use Personal Data for the following purposes:</p>
         <ul>
           <li>
@@ -208,7 +208,7 @@
           <li><strong>With Your consent</strong>: We may disclose Your personal information for any other purpose with
             Your consent.</li>
         </ul>
-        <h2>Retention of Your Personal Data</h2>
+        <h4>Retention of Your Personal Data</h4>
         <p>The Company will retain Your Personal Data only for as long as is necessary for the purposes set out in this
           Privacy Policy. We will retain and use Your Personal Data to the extent necessary to comply with our legal
           obligations (for example, if we are required to retain your data to comply with applicable laws), resolve
@@ -216,7 +216,7 @@
         <p>The Company will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for
           a shorter period of time, except when this data is used to strengthen the security or to improve the
           functionality of Our Service, or We are legally obligated to retain this data for longer time periods.</p>
-        <h2>Transfer of Your Personal Data</h2>
+        <h4>Transfer of Your Personal Data</h4>
         <p>Your information, including Personal Data, is processed at the Company's operating offices and in any other
           places where the parties involved in the processing are located. It means that this information may be
           transferred to — and maintained on — computers located outside of Your state, province, country or other
@@ -227,7 +227,7 @@
           accordance with this Privacy Policy and no transfer of Your Personal Data will take place to an organization
           or a country unless there are adequate controls in place including the security of Your data and other
           personal information.</p>
-        <h2>Delete Your Personal Data</h2>
+        <h4>Delete Your Personal Data</h4>
         <p>You have the right to delete or request that We assist in deleting the Personal Data that We have collected
           about You.</p>
         <p>Our Service may give You the ability to delete certain information about You from within the Service.</p>
@@ -236,7 +236,7 @@
           contact Us to request access to, correct, or delete any personal information that You have provided to Us.</p>
         <p>Please note, however, that We may need to retain certain information when we have a legal obligation or
           lawful basis to do so.</p>
-        <h2>Disclosure of Your Personal Data</h2>
+        <h4>Disclosure of Your Personal Data</h4>
         <h3>Business Transactions</h3>
         <p>If the Company is involved in a merger, acquisition or asset sale, Your Personal Data may be transferred. We
           will provide notice before Your Personal Data is transferred and becomes subject to a different Privacy
@@ -253,7 +253,7 @@
           <li>Protect the personal safety of Users of the Service or the public</li>
           <li>Protect against legal liability</li>
         </ul>
-        <h2>Security of Your Personal Data</h2>
+        <h4>Security of Your Personal Data</h4>
         <p>The security of Your Personal Data is important to Us, but remember that no method of transmission over the
           Internet, or method of electronic storage is 100% secure. While We strive to use commercially acceptable means
           to protect Your Personal Data, We cannot guarantee its absolute security.</p>
