--- a/frontEndCaptini/src/app/Auth/register/register.component.html
+++ b/frontEndCaptini/src/app/Auth/register/register.component.html
@@ -100,12 +100,18 @@
             <div class="checkbox mb-2">
                 <span>
                   <input type="checkbox" value="false" [checked]="isChecked" formControlName="agree"> {{'register.agree' |translate}}
-                  <a href="#"> {{'register.terms' |translate}}</a> {{'register.and' |translate}}
+                  <a href="#"  data-bs-toggle="modal"
+                  data-bs-target="#TermsOfUseModal"> {{'register.terms' |translate}}</a>
+                  {{'register.and' |translate}}
                   <a href="#"  data-bs-toggle="modal"
                 data-bs-target="#PrivacyModal">{{'register.privacy' |translate}}</a>
                 </span>
             </div>
             <!-- Modal -->
+            <div class="modal fade" id="TermsOfUseModal" tabindex="-1" aria-labelledby="TermsOfUseModalLabel"
+            aria-hidden="true">
+              <termsofuse></termsofuse>
+            </div>
             <div class="modal fade" id="PrivacyModal" tabindex="-1" aria-labelledby="PrivacyModalLabel"
             aria-hidden="true">
               <privacypolicy></privacypolicy>
