--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -241,7 +241,8 @@
                             </div>
                             <p>{{'title.LessonsData'|translate}}</p>
                             <p>{{'user.Read'|translate}}
-                              <a href="#">{{'register.terms'|translate}}</a>
+                              <a href="#" data-bs-toggle="modal"
+                                data-bs-target="#TermsOfUseModal">{{'register.terms'|translate}}</a>
                                 {{'register.and'|translate}}
                                 <a href="#"  data-bs-toggle="modal"
                                 data-bs-target="#PrivacyModal">{{'register.privacy' |translate}}</a>
@@ -249,10 +250,16 @@
                             <a href="#">{{'user.help'|translate}}</a>
                         </div>
                         <!-- Modal -->
+                        <div class="modal fade" id="TermsOfUseModal" tabindex="-1" aria-labelledby="TermsOfUseModalLabel"
+                        aria-hidden="true">
+                          <termsofuse></termsofuse>
+                        </div>
                         <div class="modal fade" id="PrivacyModal" tabindex="-1" aria-labelledby="PrivacyModalLabel"
                         aria-hidden="true">
                           <privacypolicy></privacypolicy>
                         </div>
+
+
                         <div class="account" id="account">
                             <div class="title">
                                 <h5>{{'title.account'|translate}}</h5>
