--- a/frontEndCaptini/src/app/modules/general/components/header/header.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/header/header.component.html
@@ -20,7 +20,7 @@
                 <div class="profile-img ps-2">
                     <div class="dropdown">
                         <a class="dropdown-toggle" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img [src]="profilePicture" alt="Iceland">
+                            <img [src]="profilePicture" alt="Iceland"style="width: 40px; height: 40px;">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start" aria-labelledby="dropdownMenu2">
                             <li><a class="dropdown-item" type="button" routerLink="/profile">{{'menu.updateProfile' | translate}}</a></li>
