--- a/frontEndCaptini/src/app/modules/general/components/home/home.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/home/home.component.html
@@ -66,18 +66,6 @@
             <div class="tab-pane fade" id="pills-statics" role="tabpanel" aria-labelledby="pills-statics-tab">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="card h96 active">
-                            <div class="card-body">
-                                <h5 class="card-title">Community Points</h5>
-                                <p class="card-text text-end text-lg">97</p>
-                            </div>
-                        </div>
-                        <div class="card h266">
-                            <div class="card-body" style=" height: 299px;">
-                                <h5 class="card-title">Fluency</h5>
-                                <img src="../../assets/image/bkg/pie.png" style="width: 250px; margin-top: 20²px;">
-                            </div>
-                        </div>
                         <div class="card h96 active" *ngIf="!loading && user">
                             <div class="card-body">
                                 <h5 class="card-title">Total score</h5>
@@ -100,7 +88,7 @@
                         </div>
                         <div class="card h78" *ngIf="!loading && user">
                             <div class="card-body">
-                                <h5 class="card-title">Lessons completed</h5>
+                                <h5 class="card-title">Lessons completed (fully)</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="progress">
                                         <div class="progress-bar" 
@@ -132,7 +120,7 @@
                         </div>
                         <div class="card h78" *ngIf="!loading && user">
                             <div class="card-body">
-                                <h5 class="card-title">Topics completed</h5>
+                                <h5 class="card-title">Topics completed (fully)</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="progress">
                                         <div class="progress-bar" 
