--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
@@ -29,9 +29,22 @@
                         <div class="card-header d-flex justify-content-between"style=" height: 100px;">
                             <div class="">
                                 <h3>{{'topic.lesson' | translate}} {{i+1}}</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" 
+                                         role="progressbar" 
+                                         [attr.aria-valuenow]="listlesson.length*listlessonsstatistics[0][i][1]" 
+                                         aria-valuemin="0" 
+                                         [attr.aria-valuemax]="listlesson.length" 
+                                         [style.width.%]="listlessonsstatistics[0][i][1] * 100">
+                                    </div>
+                                </div>
+                                <ng-container *ngIf="listlessonsstatistics && listlessonsstatistics[0][i]">
+                                    <span class="success badge">
+                                        {{ listlessonsstatistics[0][i][1] }} {{'topic.finished' | translate}}
+                                    </span>
+                                </ng-container>
                                 <p class="semi-bold">{{lesson.subject}}</p>
                             </div>
-                            <span class="success badge"> {{'topic.finished' | translate}}</span>
                         </div>
                     </div>
                 </div>
